# cc-mini

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.session  Makefile  README.md  README_LMS.md  SECURITY_AUDIT.md  TODO.md  docker-compose.yml  enhanced_logger.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
STEP/: 01_lmstudio_docker_py39_commit.md  02_security_audit.md  03_notebook_and_langchain.md  04_langchain_cli_flag.md  05_async_tui_plan.md  06_async_tui_pitfalls.md
docs/: configuration.md  session-api.md
docs/research/: goal-command-deep-research.md
notebooks/: .gitignore  README.md  cc_mini.ipynb  pyproject.toml  requirements.txt
notebooks/.ipynb_checkpoints/: cc_mini-checkpoint.ipynb
notebooks/src/: main.py
notebooks/tests/: test_main.py
src/buddy/: __init__.py  animator.py  companion.py  storage.py
src/commands/: __init__.py
src/core/: commands.py  compact.py  config.py  context.py  engine.py  llm.py  main.py  permissions.py  session.py  tool.py
src/features/: compact.py  coordinator.py  cost_tracker.py  goal.py  langchain_fallback.py  memory.py  plan.py  skills.py  worker_manager.py
src/session/: README.md  __init__.py  checkpoint.py  events.py  models.py  pyproject.toml  serializer.py  session.py  tool_executor.py
src/session/_viz/: server.py
src/session/_viz/static/: session.js
src/session/_viz/templates/: session.html
src/session/tests/: test_checkpoint.py  test_models.py  test_serializer.py  test_session.py  test_tool_executor.py
src/tools/: agent.py  ask_user.py  bash.py  file_edit.py  file_read.py  file_write.py  glob_tool.py  grep_tool.py  plan_tools.py
src/tui/: app.py  async_app.py  display.py  engine_bridge.py  formatted_buffer.py  formatted_input.py  input_parser.py  keylistener.py  notebook.py  output_buffer.py  (+3 more)
tests/: test_async_tui.py  test_autoscroll.py  test_buddy_mood.py  test_clear.py  test_command_rendering.py  test_commands.py  test_config.py  test_coordinator.py  test_cost_tracker.py  test_engine.py  test_focus.py  test_formatted_buffer.py  test_header.py  test_input_focus.py  test_keyboard_focus.py  test_langchain_fallback.py  test_llm.py  test_main.py  test_manual_scroll.py  test_notebook.py  test_permissions.py  test_plan.py  test_render_output.py  test_rendering.py  test_sandbox_integration.py  test_scroll_follow.py  test_scroll_integration.py  test_tools.py  test_tui_app.py  test_worker_manager.py
(+20 files in other folders)
