[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cc-mini"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "prompt_toolkit>=3.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["build>=1.2.0", "hatchling>=1.25.0", "pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
cc-mini = "tui.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/core", "src/features", "src/tui", "src/commands", "src/buddy", "src/tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
