[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-session-whitebox"
version = "0.1.0"
description = "White-box conversation session manager for LLM agents — typed messages, tool lifecycle tracking, event observation, versionable history"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []    # zero runtime deps — stdlib only

[project.optional-dependencies]
viz = ["flask>=3.0"]
dev = ["pytest>=8.0", "flask>=3.0"]

[project.scripts]
session-viz = "session._viz.server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
